--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
          </div>
     </div>
     <div class="home-right">
-      <img src="assets/download.jpg">
+      <img src="download.jpg">
     </div>
   </section>
 
@@ -47,10 +47,10 @@
     <h1 class="title">Our best sales</h1>
     <div class="best-sales-product">
       <div class="div1">
-        <img src="assets/download (5).jpg" >
+        <img src="download (5).jpg" >
       </div>
       <div class="div2">
-        <img src="assets/Fabio Furlotti _ Gio Scotti.jpg">
+        <img src="Fabio Furlotti _ Gio Scotti.jpg">
       </div>
       <div class="div3">
         <span>fashion</span>
@@ -61,7 +61,7 @@
     </div>
       <div class="div5"><span>Bershka</span></div>
       <div class="div6">
-        <img src="assets/download (2).jpg">
+        <img src="download (2).jpg">
       </div>
       <div class="div7"><span>H&M</span></div>
     </div>
