--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <button>quote
             <span class="home-about-us">
               <h1 class="title">our key quote</h1>
-              <img src="assets/download (7).jpg">
+              <img src="download (7).jpg">
               <p>"inspired by you for you"</p>
             </span>
           </button>
